# cascadia-os

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  COMMERCIAL.md  CONTRIBUTING.md  LICENSE  LICENSING.md  MANUAL.md  Makefile  PRISM_MANUAL.md  QUICKSTART.md  QUICKSTART_LINUX.md  README.md  SECURITY.md  STORY.md  SUPPORT.md  UNINSTALL.md  apply-final-fixes.sh  apply-operators-ui.sh  apply-version-autoupdate.sh  config.example.json  config.json  demo.sh  flint-link.sh  install.sh  pyproject.toml  run.sh  setup-llm.sh  start.sh  stop.sh  stripe.config.json.example  uninstall.sh
automation/: __init__.py  stitch.py
bridge/: __init__.py  handshake.py
cascadia/: __init__.py
chat/: __init__.py  bell.py
dashboard/: __init__.py  prism.html  prism.py
docs/: api.md  apple_pay_setup.md  compliance_marketing.md  crm_integration.md  eu_ai_act_compliance.md  iot_integration.md  missions.md  operator_store_page.md  operators.md  production_checklist.md  woocommerce_email_template.md  woocommerce_setup.md
durability/: resume_manager.py
encryption/: __init__.py  curtain.py
flint/: cascadia.5s.sh
gateway/: __init__.py  vanguard.py
guide/: almanac.py
hardware/: README.md  platform.schema.json  server_health_check.sh  zero_touch_deploy.sh
installer/: __init__.py  once.py  setup.html
kernel/: flint.py
memory/: vault.py
orchestrator/: beacon.py
registry/: crew.py
samples/: README.md  chief-brief-2026-04-18.md  debrief-gc-logistics-2026-04-18.md  debrief-gulf-coast-logistics-2026-04-18.md  proposal-GC-Logistics-2026-04-18.md  proposal-Gulf-Coast-Logistics-2026-04-18.md  recon-houston-warehouse-leads-2026-04-18.csv
scripts/: demo.sh  generate_bulk_licenses.py  generate_license.py  reset_demo.py  seed_demo_data.py
sdk/: README.md  cascadia_sdk.py
security/: sentinel.py
swiftbar-plugins/: cascadia.5s.sh
templates/: README.md  construction.json  hvac.json  legal.json  medical.json
tests/: test_api_key_auth.py  test_approval_analytics.py  test_approval_connector.py  test_approval_timeout.py  test_audit_log.py  test_b2_b3_b4_connectors.py  test_backup.py  test_billing.py  test_c_operators.py  test_conduit.py  test_config_routes.py  test_connector_packaging.py  test_context_builder.py  test_crash_recovery.py  test_depot_api.py  test_depot_installer.py  test_depot_sync.py  test_e2e_approval_flow.py  test_edit_approval.py  test_email_delivery.py  test_fleet_registry.py  (+40 more)
(+338 files in other folders)
