[project]
name = "zyrcon-x"
version = "0.43.0"
description = "Zyrcon-X — local-first single-node operator platform"
requires-python = ">=3.11"
dependencies = [
    "cryptography>=42.0.0",
    "flask>=3.0.0",
    "flask-cors>=4.0.0",
    "requests>=2.31.0",
    "ddgs>=4.0.0",
]

[project.optional-dependencies]
operators = [
    "flask>=3.0.0",
    "flask-cors>=4.0.0",
    "requests>=2.31.0",
    "ddgs>=4.0.0",
    "tweepy>=4.14.0",
]

tray = [
    "pystray>=0.19.0",
    "pillow>=10.0.0",
]

[project.scripts]
zyrcon-watchdog = "zyrcon.kernel.watchdog:main"
zyrcon-flint    = "zyrcon.kernel.flint:main"
zyrcon-once     = "tools.installer.once:main"
zyrcon          = "zyrcon.kernel.watchdog:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["zyrcon*", "operators*", "dashboard*", "tools*"]

[tool.zyrcon]
version = "0.43"
control_plane = "zyrcon.kernel.flint"
entrypoint    = "zyrcon.kernel.watchdog"
